Fix overflow issue

--- a/framework/src/components/SocialProof/SocialProof.module.css
+++ b/framework/src/components/SocialProof/SocialProof.module.css
@@ -1,5 +1,5 @@
 .container {
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .image {
